force-app/main/default/objects/BatchInfo__c/BatchInfo__c.object-meta.xml
<CustomObject>
    <label>BatchInfo</label>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>BatchInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BatchInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>