force-app/main/default/objects/BatchInfo__c/fields/Businesshour__c.field-meta.xml
<CustomField>
    <fullName>Businesshour__c</fullName>
    <label>Businesshour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>