force-app/main/default/objects/BatchInfo__c/fields/Chart_Name__c.field-meta.xml
<CustomField>
    <fullName>Chart_Name__c</fullName>
    <label>Chart Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Average Field Value Time</fullName>
            </value>
            <value>
                <fullName>Case Owner Leaderboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>