force-app/main/default/objects/BatchInfo__c/fields/Dates__c.field-meta.xml
<CustomField>
    <fullName>Dates__c</fullName>
    <label>Dates</label>
    <length>100</length>
    <type>Text</type>
</CustomField>