force-app/main/default/objects/BatchInfo__c/fields/LastRefreshedDate__c.field-meta.xml
<CustomField>
    <fullName>LastRefreshedDate__c</fullName>
    <label>LastRefreshedDate</label>
    <type>Date</type>
</CustomField>