force-app/main/default/objects/BatchInfo__c/fields/SobjectFieldType__c.field-meta.xml
<CustomField>
    <fullName>SobjectFieldType__c</fullName>
    <label>SobjectFieldType</label>
    <length>225</length>
    <type>Text</type>
</CustomField>