force-app/main/default/objects/BatchInfo__c/fields/SobjectFieldValue__c.field-meta.xml
<CustomField>
    <fullName>SobjectFieldValue__c</fullName>
    <label>SobjectFieldValue</label>
    <type>TextArea</type>
</CustomField>