force-app/main/default/objects/BatchInfo__c/fields/SobjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>SobjectRecordType__c</fullName>
    <label>SobjectRecordType</label>
    <type>TextArea</type>
</CustomField>