force-app/main/default/objects/BatchInfo__c/fields/SobjectType__c.field-meta.xml
<CustomField>
    <fullName>SobjectType__c</fullName>
    <label>SobjectType</label>
    <length>18</length>
    <type>Text</type>
</CustomField>