force-app/main/default/objects/BatchInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DataRepresentation__c</columns>
    <columns>WillRefresh__c</columns>
    <columns>SobjectFieldValue__c</columns>
    <columns>Filter_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>